ifc-macros/test/pass_high_to_fn.stderr
error: Cannot pass high expression as an argument to functions or macros
 --> $DIR/pass_high_to_fn.rs:9:18
  |
9 |         let _y = inc(x);
  |                  ^^^^^^
  |
help: High Expression
 --> $DIR/pass_high_to_fn.rs:9:22
  |
9 |         let _y = inc(x);
  |                      ^
